[gd_scene load_steps=49 format=3 uid="uid://qgox2rj7nweo"]

[ext_resource type="Script" path="res://Assets/Enemy.gd" id="1_5cry7"]
[ext_resource type="Texture2D" uid="uid://d2pku8huvp2tt" path="res://Arta/Torch/sheet.png" id="2_0k5jk"]
[ext_resource type="Texture2D" uid="uid://cjgtyf4daoen6" path="res://Arta/Enemies/Basic Idle Weapon.png" id="3_88j7c"]
[ext_resource type="Texture2D" uid="uid://dnx6c27cm6nih" path="res://Arta/Enemies/Basic Run.png" id="3_dafuv"]
[ext_resource type="Texture2D" uid="uid://drqns68gt8n16" path="res://Arta/Info Board/ExclamationMark-16x16-1.png.png" id="3_frlbg"]
[ext_resource type="Texture2D" uid="uid://b5o8l5m08xjwx" path="res://Arta/Enemies/Basic Idle.png" id="3_ihsgk"]
[ext_resource type="Texture2D" uid="uid://otvo8etf0co" path="res://Arta/Player/SabieSerios.png" id="5_ow4p5"]

[sub_resource type="Curve" id="Curve_5mwr6"]
max_value = 3.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.866667, 0.824176), 0.0, 0.0, 0, 0, Vector2(1, 1.18681), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_52rqs"]
curve = SubResource("Curve_5mwr6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vp7v4"]
lifetime_randomness = 0.05
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -16.265, 0)
emission_shape_scale = Vector3(2, 2, 1)
emission_shape = 2
emission_sphere_radius = 4.65
angle_min = -64.7
angle_max = 61.9
spread = 180.0
initial_velocity_min = 36.47
initial_velocity_max = 89.89
gravity = Vector3(0, 98, 0)
radial_accel_min = 22.47
radial_accel_max = 35.96
scale_max = 1.2
scale_over_velocity_min = 11.23
scale_over_velocity_max = 22.47
scale_over_velocity_curve = SubResource("CurveTexture_52rqs")
color = Color(1, 0.168627, 0.180392, 1)
turbulence_enabled = true
turbulence_noise_strength = 1.26
turbulence_noise_scale = 1.632
collision_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydcea"]
size = Vector2(16, 64)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6ubgm"]
b = Vector2(-8.14498e-05, 11.25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2seac"]
atlas = ExtResource("3_ihsgk")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfoiu"]
atlas = ExtResource("3_ihsgk")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkhx5"]
atlas = ExtResource("3_88j7c")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mo4h"]
atlas = ExtResource("3_88j7c")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o4d8"]
atlas = ExtResource("3_dafuv")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfu2d"]
atlas = ExtResource("3_dafuv")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_osorw"]
atlas = ExtResource("3_dafuv")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_22h57"]
atlas = ExtResource("3_dafuv")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_na2ue"]
atlas = ExtResource("3_dafuv")
region = Rect2(0, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxns6"]
atlas = ExtResource("3_dafuv")
region = Rect2(48, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu373"]
atlas = ExtResource("3_dafuv")
region = Rect2(96, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1pdm"]
atlas = ExtResource("3_dafuv")
region = Rect2(144, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a002d"]
atlas = ExtResource("3_dafuv")
region = Rect2(0, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbfhj"]
atlas = ExtResource("3_dafuv")
region = Rect2(48, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shan7"]
atlas = ExtResource("3_dafuv")
region = Rect2(96, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efm8a"]
atlas = ExtResource("3_dafuv")
region = Rect2(144, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkw0h"]
atlas = ExtResource("3_dafuv")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yec3q"]
atlas = ExtResource("3_dafuv")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpec6"]
atlas = ExtResource("3_dafuv")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvl3q"]
atlas = ExtResource("3_dafuv")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfnwp"]
atlas = ExtResource("3_dafuv")
region = Rect2(0, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia2di"]
atlas = ExtResource("3_dafuv")
region = Rect2(48, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa2te"]
atlas = ExtResource("3_dafuv")
region = Rect2(96, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu8x3"]
atlas = ExtResource("3_dafuv")
region = Rect2(144, 64, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vqyu"]
atlas = ExtResource("3_dafuv")
region = Rect2(0, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76kjy"]
atlas = ExtResource("3_dafuv")
region = Rect2(48, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro17x"]
atlas = ExtResource("3_dafuv")
region = Rect2(96, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kew1g"]
atlas = ExtResource("3_dafuv")
region = Rect2(144, 128, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fqesj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2seac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfoiu")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkhx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mo4h")
}],
"loop": true,
"name": &"Idle_weapon",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o4d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfu2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osorw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22h57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na2ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxns6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu373")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1pdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a002d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbfhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shan7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efm8a")
}],
"loop": true,
"name": &"Running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkw0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yec3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpec6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvl3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfnwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia2di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa2te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu8x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vqyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76kjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro17x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kew1g")
}],
"loop": true,
"name": &"Walking",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0k5jk")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rlwv8"]
atlas = ExtResource("5_ow4p5")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o1vo"]
atlas = ExtResource("5_ow4p5")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv6f1"]
atlas = ExtResource("5_ow4p5")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh5e2"]
atlas = ExtResource("5_ow4p5")
region = Rect2(96, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i0d1"]
atlas = ExtResource("5_ow4p5")
region = Rect2(0, 128, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6rtgq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlwv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o1vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv6f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh5e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i0d1")
}],
"loop": false,
"name": &"sword",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1a0b"]
size = Vector2(48, 64)

[node name="Basic_Enemy" type="CharacterBody2D"]
collision_layer = 66
collision_mask = 5
platform_floor_layers = 4294967044
script = ExtResource("1_5cry7")

[node name="Blood_Particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_vp7v4")
lifetime = 0.5
one_shot = true
explosiveness = 0.59
trail_enabled = true
trail_lifetime = 0.05
trail_sections = 2
trail_section_subdivisions = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ydcea")

[node name="Sword_Attack_Check" type="Area2D" parent="."]
collision_mask = 66
monitoring = false

[node name="Attack Check" type="CollisionShape2D" parent="Sword_Attack_Check"]
rotation = -1.5708
scale = Vector2(2, 4)
shape = SubResource("SegmentShape2D_6ubgm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
position = Vector2(0, 0.5)
sprite_frames = SubResource("SpriteFrames_fqesj")
animation = &"Idle_weapon"

[node name="weapon" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(3, 0)
sprite_frames = SubResource("SpriteFrames_6rtgq")
animation = &"sword"
frame = 4
frame_progress = 1.0

[node name="excl_mark" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -48)
texture = ExtResource("3_frlbg")

[node name="Change_State_Cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Cooldown_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Wait_Before_Jump_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Dead_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Check_For_Player_To_Follow_Right" type="Area2D" parent="."]
collision_layer = 16

[node name="Check_For_Player" type="CollisionPolygon2D" parent="Check_For_Player_To_Follow_Right"]
modulate = Color(0.266667, 0.266667, 0.266667, 1)
polygon = PackedVector2Array(8, 32, 104, 40, 104, -56, 8, -32)

[node name="Check_For_Player_To_Keep_Following_Right" type="Area2D" parent="."]
collision_layer = 16

[node name="Check_For_Player" type="CollisionPolygon2D" parent="Check_For_Player_To_Keep_Following_Right"]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
polygon = PackedVector2Array(8, 32, 192, 96, 192, -112, 8, -32)

[node name="Check_For_Player_To_Follow_Left" type="Area2D" parent="."]
scale = Vector2(-1, 1)
collision_layer = 16

[node name="Check_For_Player" type="CollisionPolygon2D" parent="Check_For_Player_To_Follow_Left"]
modulate = Color(0.266667, 0.266667, 0.266667, 1)
polygon = PackedVector2Array(8, 32, 104, 40, 104, -56, 8, -32)

[node name="Check_For_Player_To_Keep_Following_Left" type="Area2D" parent="."]
rotation = 3.14159
scale = Vector2(1, -1)
collision_layer = 16

[node name="Check_For_Player" type="CollisionPolygon2D" parent="Check_For_Player_To_Keep_Following_Left"]
modulate = Color(0.258824, 0.258824, 0.258824, 1)
polygon = PackedVector2Array(8, 32, 184, 95.9995, 184, -112, 8, -32)

[node name="Check_For_Player_Ball" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Check_For_Player_Ball"]
shape = SubResource("RectangleShape2D_c1a0b")
debug_color = Color(0.298039, 0, 0.113725, 0.419608)

[connection signal="body_entered" from="Sword_Attack_Check" to="." method="_on_sword_attack_check_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D/weapon" to="." method="_on_weapon_animation_finished"]
[connection signal="timeout" from="Change_State_Cooldown" to="." method="_on_change_state_cooldown_timeout"]
[connection signal="timeout" from="Cooldown_Timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="Wait_Before_Jump_Timer" to="." method="_on_wait_before_jump_timer_timeout"]
[connection signal="timeout" from="Dead_Timer" to="." method="_on_dead_timer_timeout"]
[connection signal="body_entered" from="Check_For_Player_To_Follow_Right" to="." method="_on_check_for_player_to_follow_body_entered"]
[connection signal="body_exited" from="Check_For_Player_To_Keep_Following_Right" to="." method="_on_check_for_player_to_keep_following_body_exited"]
[connection signal="body_entered" from="Check_For_Player_To_Follow_Left" to="." method="_on_check_for_player_to_follow_body_entered"]
[connection signal="body_exited" from="Check_For_Player_To_Keep_Following_Left" to="." method="_on_check_for_player_to_keep_following_body_exited"]
[connection signal="body_entered" from="Check_For_Player_Ball" to="." method="_on_check_for_player_to_follow_body_entered"]
